Tue Jul 17 00:49:52 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am (ASASM_VERSION): Add.
	* lex.c (Lex_GetBuiltinVariable): Define {ASASM_VERSION} iso {ASASM}.
	* variables.c (Var_PrepareForPhase): Call Var_PredefineVariables
	before each pass.
	(Var_PredefineVariables): Define |asasm$version|.
	(Var_Declare): Rename to Var_Define and clean up as we don't have
	any concept of declare vs define anymore.
	(c_set): No longer set SYMBOL_DEFINED, this should already been set.
	* regression/tests_pass/version.s: Add.
	* regression/tests_pass/variable_define.s: Add.
	* regression/tests_pass/builtinvar_cpu1.s,
	regression/tests_pass/builtinvar_cpu2.s: Remove (superseded by the
	option_cpu tests).

Mon Jul 16 22:25:13 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c, asm.h (ASM_Assemble): Support one pass assembling.
	* lex.c (Lex_GetBuiltinVariable): Add support for {INTER}, {CPU}, {FPU},
	{ROPI}, {TARGET_ARCH_ARM}, {TARGET_ARCH_THUMB}, {TARGET_ARCH_1},
	{TARGET_ARCH_2}, {TARGET_ARCH_2A}, {TARGET_ARCH_3}, {TARGET_ARCH_3G},
	{TARGET_ARCH_3M}, {TARGET_ARCH_4XM}, {TARGET_ARCH_4}, {TARGET_ARCH_4TXM},
	{TARGET_ARCH_4T}, {TARGET_ARCH_5XM}, {TARGET_ARCH_5},
	{TARGET_ARCH_5TXM}, {TARGET_ARCH_5T}, {TARGET_ARCH_5TEXP},
	{TARGET_ARCH_5TE}, {TARGET_ARCH_5TEJ}, {TARGET_ARCH, {TARGET_ARCH_6K},
	{TARGET_ARCH_6T2}, {TARGET_ARCH_6Z}, {TARGET_ARCH_6_M},
	{TARGET_ARCH_6S_M}, {TARGET_ARCH_7}, {TARGET_ARCH_7_A},
	{TARGET_ARCH_7_R}, {TARGET_ARCH_7_M}, {TARGET_ARCH_7E_M},
	{TARGET_FEATURE_CLZ}, {TARGET_FEATURE_DIVIDE},
	{TARGET_FEATURE_DOUBLEWORD}, {TARGET_FEATURE_DSPMUL},
	{TARGET_FEATURE_EXTENSION_REGISTER_COUNT}, {TARGET_FEATURE_MULTIPLY},
	{TARGET_FEATURE_MULTIPROCESSING}, {TARGET_FEATURE_NEON},
	{TARGET_FEATURE_NEON_FP16}, {TARGET_FEATURE_NEON_FP32},
	{TARGET_FEATURE_NEON_INTEGER}, {TARGET_FEATURE_UNALIGNED},
	{TARGET_FPU_FPA}, {TARGET_FPU_SOFTFPA}, {TARGET_FPU_SOFTFPA_FPA},
	{TARGET_FPU_SOFTFPA_VFP}, {TARGET_FPU_SOFTVFP}, {TARGET_FPU_SOFTVFP_FPA},